# haskell-elm-project-template

./: .gitignore  Gruntfile.coffee  README.md  elm-package.json  haskell-elm-project-template.cabal  package.json
client/: Main.elm
client/coffee/: support.coffee
client/jade/: index.jade
doc/: tools_vision.pptx
src/: Main.hs  Test.hs
