name:                haskell-elm-project-template
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/japsu/haskell-elm-project-template#readme
license:             BSD3
license-file:        LICENSE
author:              Santtu Pajukanta
maintainer:          santtu@pajukanta.fi
copyright:           © 2015 Leonidas Oy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , text   == 1.2.*
    , aeson  == 0.10.*
    , mtl    == 2.2.*
    , scotty == 0.10.*
    , transformers == 0.4.*
    , wai-cors == 0.2.*
    , unix == 2.7.*

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: src/Test.hs
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5
    , doctest == 0.10.*
